--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
     "target": "es5",
     "module": "commonjs",
     "outDir": "dist",
+    "strict": false,
     "esModuleInterop": true,
   },
   "include": ["src/*.ts"]
